--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/logo.webp" type="image/x-icon">
+    <!-- Owl Carousel CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 </head>
 <body>
     <!-- Header -->
@@ -20,17 +23,7 @@
                     </a>
                 </div>
                 <div class="header-actions">
-                    <div class="user-options">
-                        <a href="presupuesto.html" class="user-link" title="Pedir presupuesto" aria-label="Pedir presupuesto">
-                            <span class="icon">📝</span>
-                            <span class="label">Pedir presupuesto</span>
-                        </a>
-                        <a href="contacto.html" class="cart-link" title="Contacto" aria-label="Contacto">
-                            <span class="icon">📱</span>
-                            <span class="label">Contacto</span>
-                        </a>
-                    </div>
-                    <button class="menu-toggle" aria-label="Abrir menú de navegación">☰</button>
+                    <button class="menu-toggle" aria-label="Abrir menú de navegación">Categorias</button>
                 </div>
             </div>
             <div class="search-bar">
@@ -168,6 +161,72 @@
     </div>
 </section>
 
+<!-- Categories Carousel -->
+<section class="categories">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div id="categs-slider" class="home-categories owl-carousel owl-theme">
+                    <div class="home-categories-item">
+                        <a href="categoria.html?nombre=Cocinas">
+                            <img class="home-categories-img" src="images/cocinas_owl_carrusel.webp" alt="Cocinas">
+                            <div class="home-categories-name">Cocinas</div>
+                        </a>
+                    </div>
+                    <div class="home-categories-item">
+                        <a href="categoria.html?nombre=Hornos%2C+microondas+y+freidoras">
+                            <img class="home-categories-img" src="images/hornos/Horno_electrico_Bgh_BHE30FN24T_c_Airfryer_30lts_1600wts_1.webp" alt="Hornos, microondas y freidoras">
+                            <div class="home-categories-name">Aires</div>
+                        </a>
+                    </div>
+                    <div class="home-categories-item">
+                        <a href="categoria.html?nombre=Tecnologia&subcategoria=Celulares">
+                            <img class="home-categories-img" src="images/celulares/liberado_moto_e_13_2_64_2.webp" alt="Celulares">
+                            <div class="home-categories-name">Celulares</div>
+                        </a>
+                    </div>
+                    <div class="home-categories-item">
+                        <a href="categoria.html?nombre=Heladeras">
+                            <img class="home-categories-img" src="images/heladeras/Heladera_Samsung_RT29K507JS8_Silver_No_Fr_290lts_sin_dispenser_1.webp" alt="Heladeras">
+                            <div class="home-categories-name">Heladeras</div>
+                        </a>
+                    </div>
+                    <div class="home-categories-item">
+                        <a href="categoria.html?nombre=Climatizacion&subcategoria=Calefaccion electrica">
+                            <img class="home-categories-img" src="images/estufas/Calefactor_Whitenblack_infrarojo_WBCIWB02_500_1000W_1.webp" alt="Calefacción">
+                            <div class="home-categories-name">Calefacción</div>
+                        </a>
+                    </div>
+                    <div class="home-categories-item">
+                        <a href="categoria.html?nombre=Tv y audio">
+                            <img class="home-categories-img" src="images/Televisores/TV_LED _Philips_32_Smart_HD_32PHD6910_77_con_Titan_OS_3.webp" alt="Smart TV">
+                            <div class="home-categories-name">Smart TV</div>
+                        </a>
+                    </div>
+                    <div class="home-categories-item">
+                        <a href="categoria.html?nombre=Lavado&subcategoria=Lavarropas">
+                            <img class="home-categories-img" src="images/Lavarropas/Lavasecarropas_Samsung_WD95A4453BWUBG_9_5kg_Blanco_1.webp" alt="Lavado">
+                            <div class="home-categories-name">Lavarropas</div>
+                        </a>
+                    </div>
+                    <div class="home-categories-item">
+                        <a href="categoria.html?nombre=Termotanques">
+                            <img class="home-categories-img" src="images/gas/Termot_Rheem_80_lts_pie_carga_sup_GN_Gris_tgnp080rh_1.webp" alt="Termotanques">
+                            <div class="home-categories-name">Termotanques</div>
+                        </a>
+                    </div>
+                    <div class="home-categories-item">
+                        <a href="categoria.html?nombre=Pequeños electrodomesticos">
+                            <img class="home-categories-img" src="images/pavas_electricas/Pava_Electrica_Philips_HD9368_90_Negra_Temp_Para_Mate_17L_2200w_3.webp" alt="Pequeños Electrodomésticos">
+                            <div class="home-categories-name">Pequeños Electro</div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
         <!-- Product Catalog -->
 <section class="catalog">
     <h2>Destacados del mes</h2>
@@ -198,6 +257,10 @@
     </button>
 
     <!-- Script -->
+     <!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- Owl Carousel JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script src="precios.js"></script>
 <script src="productos.js"></script>
 <script src="scripts.js"></script>
@@ -329,6 +392,26 @@ if (productosDestacadosFiltrados.length === 0) {
         productGrid.appendChild(card);
     });
 }
+// Inicializar Owl Carousel para categorías
+$(document).ready(function(){
+    $("#categs-slider").owlCarousel({
+        loop: true,
+        margin: 20,
+        nav: true,
+        dots: false,
+        responsive: {
+            0: {
+                items: 2
+            },
+            600: {
+                items: 4
+            },
+            1000: {
+                items: 6
+            }
+        }
+    });
+});
 </script>
 </body>
 </html>
