--- a/index.html
+++ b/index.html
@@ -169,55 +169,55 @@
                 <div id="categs-slider" class="home-categories owl-carousel owl-theme">
                     <div class="home-categories-item">
                         <a href="categoria.html?nombre=Cocinas">
-                            <img class="home-categories-img" src="images/cocinas_owl_carrusel.webp" alt="Cocinas">
+                            <img class="home-categories-img" src="images/owl_carrusel/cocinas_owl_carrusel-removebg-preview.png" alt="Cocinas">
                             <div class="home-categories-name">Cocinas</div>
                         </a>
                     </div>
                     <div class="home-categories-item">
                         <a href="categoria.html?nombre=Hornos%2C+microondas+y+freidoras">
-                            <img class="home-categories-img" src="images/hornos/Horno_electrico_Bgh_BHE30FN24T_c_Airfryer_30lts_1600wts_1.webp" alt="Hornos, microondas y freidoras">
+                            <img class="home-categories-img" src="images/owl_carrusel/Horno_electrico_Bgh_BHE30FN24T_c_Airfryer_30lts_1600wts_1-removebg-preview.png" alt="Hornos, microondas y freidoras">
                             <div class="home-categories-name">Aires</div>
                         </a>
                     </div>
                     <div class="home-categories-item">
                         <a href="categoria.html?nombre=Tecnologia&subcategoria=Celulares">
-                            <img class="home-categories-img" src="images/celulares/liberado_moto_e_13_2_64_2.webp" alt="Celulares">
+                            <img class="home-categories-img" src="images/owl_carrusel/Termot_Rheem_80_lts_pie_carga_sup_GN_Gris_tgnp080rh_1-removebg-preview.png" alt="Celulares">
                             <div class="home-categories-name">Celulares</div>
                         </a>
                     </div>
                     <div class="home-categories-item">
                         <a href="categoria.html?nombre=Heladeras">
-                            <img class="home-categories-img" src="images/heladeras/Heladera_Samsung_RT29K507JS8_Silver_No_Fr_290lts_sin_dispenser_1.webp" alt="Heladeras">
+                            <img class="home-categories-img" src="images/owl_carrusel/heladeras_owl_carrusel-removebg-preview.png" alt="Heladeras">
                             <div class="home-categories-name">Heladeras</div>
                         </a>
                     </div>
                     <div class="home-categories-item">
                         <a href="categoria.html?nombre=Climatizacion&subcategoria=Calefaccion electrica">
-                            <img class="home-categories-img" src="images/estufas/Calefactor_Whitenblack_infrarojo_WBCIWB02_500_1000W_1.webp" alt="Calefacción">
+                            <img class="home-categories-img" src="images/owl_carrusel/Calefactor_Whitenblack_infrarojo_WBCIWB02_500_1000W_1-removebg-preview.png" alt="Calefacción">
                             <div class="home-categories-name">Calefacción</div>
                         </a>
                     </div>
                     <div class="home-categories-item">
                         <a href="categoria.html?nombre=Tv y audio">
-                            <img class="home-categories-img" src="images/televisores/TV_LED _Philips_32_Smart_HD_32PHD6910_77_con_Titan_OS_3.webp" alt="Smart TV">
+                            <img class="home-categories-img" src="images/owl_carrusel/TV_LED__Philips_32_Smart_HD_32PHD6910_77_con_Titan_OS_3-removebg-preview.png" alt="Smart TV">
                             <div class="home-categories-name">Smart TV</div>
                         </a>
                     </div>
                     <div class="home-categories-item">
                         <a href="categoria.html?nombre=Lavado&subcategoria=Lavarropas">
-                            <img class="home-categories-img" src="images/lavarropas/Lavasecarropas_Samsung_WD95A4453BWUBG_9_5kg_Blanco_1.webp" alt="Lavado">
+                            <img class="home-categories-img" src="images/owl_carrusel/Lavasecarropas_Samsung_WD95A4453BWUBG_9_5kg_Blanco_8-removebg-preview.png" alt="Lavado">
                             <div class="home-categories-name">Lavarropas</div>
                         </a>
                     </div>
                     <div class="home-categories-item">
                         <a href="categoria.html?nombre=Termotanques">
-                            <img class="home-categories-img" src="images/gas/Termot_Rheem_80_lts_pie_carga_sup_GN_Gris_tgnp080rh_1.webp" alt="Termotanques">
+                            <img class="home-categories-img" src="images/owl_carrusel/Termot_Rheem_80_lts_pie_carga_sup_GN_Gris_tgnp080rh_1-removebg-preview.png" alt="Termotanques">
                             <div class="home-categories-name">Termotanques</div>
                         </a>
                     </div>
                     <div class="home-categories-item">
                         <a href="categoria.html?nombre=Pequeños electrodomesticos">
-                            <img class="home-categories-img" src="images/pavas_electricas/Pava_Electrica_Philips_HD9368_90_Negra_Temp_Para_Mate_17L_2200w_3.webp" alt="Pequeños Electrodomésticos">
+                            <img class="home-categories-img" src="images/owl_carrusel/" alt="Pequeños Electrodomésticos">
                             <div class="home-categories-name">Pequeños Electro</div>
                         </a>
                     </div>
