--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     </div>
                     <div class="home-categories-item">
                         <a href="categoria.html?nombre=Pequeños electrodomesticos">
-                            <img class="home-categories-img" src="images/owl_carrusel/" alt="Pequeños Electrodomésticos">
+                            <img class="home-categories-img" src="images/owl_carrusel/Pava_Electrica_Philips_HD9368_90_Negra_Temp_Para_Mate_17L_2200w_3-removebg-preview.png" alt="Pequeños Electrodomésticos">
                             <div class="home-categories-name">Pequeños Electro</div>
                         </a>
                     </div>
