--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <div class="home-categories-item">
                         <a href="categoria.html?nombre=Hornos%2C+microondas+y+freidoras">
                             <img class="home-categories-img" src="images/owl_carrusel/Horno_electrico_Bgh_BHE30FN24T_c_Airfryer_30lts_1600wts_1-removebg-preview.png" alt="Hornos, microondas y freidoras">
-                            <div class="home-categories-name">Aires</div>
+                            <div class="home-categories-name">Hornos, microondas y freidoras</div>
                         </a>
                     </div>
                     <div class="home-categories-item">
