--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ if (productosDestacadosFiltrados.length === 0) {
                     <h3>${producto.nombre}</h3>
                     <p class="product-price">Precio de lista: ${precioTextoLista}</p>
                     <p class="product-price-before-tax">Pre. ant. imp. nac.: ${precioAntesImpuestos}</p>
-                    <button class="buy-btn">Ver más</button>
+                    <button class="buy-btn">Ver detalles</button>
                 </div>
             </a>
         `;
