--- a/producto.html
+++ b/producto.html
@@ -258,13 +258,13 @@ if (cuotas.length) {
         // Definir la imagen y la clase según el número de cuotas
         let imgSrc, imgClass;
         if (cuota.cuotas === 3 || cuota.cuotas === 6) {
-            imgSrc = 'images/3_6_9_12.png';
+            imgSrc = 'images/tarjetas_de_credito.png';
             imgClass = 'cuota-card-icon cuota-card-icon-3-6'; // Clase común para 3 y 6 cuotas
         } else if (cuota.cuotas === 9) {
-            imgSrc = 'images/9.png';
+            imgSrc = 'images/tarjetas_de_credito.png';
             imgClass = 'cuota-card-icon cuota-card-icon-9'; // Clase específica para 9 cuotas
         } else if (cuota.cuotas === 12) {
-            imgSrc = 'images/12.png';
+            imgSrc = 'images/tarjetas_de_credito.png';
             imgClass = 'cuota-card-icon cuota-card-icon-12'; // Clase específica para 12 cuotas
         }
 
