--- a/producto.html
+++ b/producto.html
@@ -257,15 +257,10 @@ if (cuotas.length) {
         
         // Definir la imagen y la clase según el número de cuotas
         let imgSrc, imgClass;
-        if (cuota.cuotas === 3 || cuota.cuotas === 6) {
+        if (cuota.cuotas === 3 || cuota.cuotas === 6 || cuota.cuotas === 9 || cuota.cuotas === 12) {
             imgSrc = 'images/tarjetas_de_credito.png';
             imgClass = 'cuota-card-icon cuota-card-icon-3-6'; // Clase común para 3 y 6 cuotas
-        } else if (cuota.cuotas === 9) {
-            imgSrc = 'images/tarjetas_de_credito.png';
-            imgClass = 'cuota-card-icon cuota-card-icon-9'; // Clase específica para 9 cuotas
-        } else if (cuota.cuotas === 12) {
-            imgSrc = 'images/tarjetas_de_credito.png';
-            imgClass = 'cuota-card-icon cuota-card-icon-12'; // Clase específica para 12 cuotas
+        
         }
 
         // Crear el texto de la cuota
