--- a/producto.html
+++ b/producto.html
@@ -162,9 +162,16 @@
         </div>
     </main>
 
-    <!-- Footer (igual al tuyo) -->
+   <!-- Footer -->
     <footer class="footer">
-        <!-- ... -->
+    <div class="container">
+        <p>© 2025 Center Hogar Quilmes. Todos los derechos reservados.</p>
+        <ul>
+            <li><a href="terminos.html">Términos y condiciones</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="privacidad.html">Privacidad</a></li>
+        </ul>
+    </div>
     </footer>
 
     <!-- Scroll to top -->
