banners_dia_del_padre

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                 <img src="images/logo.png" alt="Logo" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/creditos_personales.webp" alt="Creditos personales" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/tablet_dia_del_padre.webp" alt="tablet_dia_del_padre" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/Tarjeta_Naranja_2025.webp" alt="9 Cuotas Sin Interes" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/notebook_dia_del_padre.webp" alt="notebook_dia_del_padre" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
                 <img src="carrusel/termotanques_descuento_20.jpg" alt="Termotanques Descuento" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
