--- a/garantia.html
+++ b/garantia.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contáctanos en Center Hogar Quilmes por teléfono, WhatsApp, email o visítanos en nuestro local.">
-    <meta name="keywords" content="contacto, Center Hogar Quilmes, electrodomésticos, Quilmes">
-    <title>Contacto - Center Hogar Quilmes</title>
+    <meta name="description" content="Lee los Términos y Condiciones de Center Hogar Quilmes para conocer las reglas de uso de nuestro sitio y servicios.">
+    <meta name="keywords" content="términos y condiciones, Center Hogar Quilmes, electrodomésticos">
+    <title>Políticas de garantías - Center Hogar Quilmes</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -120,39 +120,28 @@
     </header>
 
     <!-- Main Content -->
-    <main class="container contact-page">
-        <section class="contact-section">
-            <h2>Contáctanos</h2>
-            <p>Estamos aquí para ayudarte. Puedes contactarnos por los siguientes medios:</p>
-            <div class="contact-grid">
-                <div class="contact-item">
-                    <h3>Teléfono</h3>
-                    <p><a href="tel:+541160640327">1160640327</a></p>
-                </div>
-                <div class="contact-item">
-                    <h3>WhatsApp</h3>
-                    <p><a href="https://api.whatsapp.com/send?phone=5491131680489&text=Hola,%20tengo%20una%20consulta" target="_blank">+5491131680489</a></p>
-                </div>
-                <div class="contact-item">
-                    <h3>Email</h3>
-                    <p><a href="mailto:chquilmes1260@gmail.com">chquilmes1260@gmail.com</a></p>
-                </div>
-                <div class="contact-item">
-                    <h3>Dirección</h3>
-                    <p>Rivadavia 220, Quilmes, Buenos Aires</p>
-                    <a href="https://maps.app.goo.gl/L5gAvmcjgZpZbtFs8" target="_blank" class="map-link">Ver en Google Maps</a>
-                </div>
-                <div class="contact-item">
-                    <h3>Horarios</h3>
-                    <p>Lunes a Sábado: 9:00 - 20:00 hs</p>
-                </div>
-                <div class="contact-item">
-                    <h3>Instagram</h3>
-                    <p><a href="https://www.instagram.com/centerhogarquilmes" target="_blank">@centerhogarquilmes</a></p>
-                </div>
-
-    </section>
-</main>
+    <main class="container legal-page">
+        <section class="legal-section">
+            <h2>Políticas de Garantías</h2>
+            <p><strong>Última actualización: 20 de mayo de 2025</strong></p>
+            <p>El comprador deberá <strong>corroborar, al recibir su producto, el estado correcto del producto (que no esté golpeado y tenga todos los accesorios completos)</strong>.</p>
+            
+            <h3>Cambios de productos:</h3>
+            <p>Si el producto es intstalado por un especialista matriculado y luego de esto el funcionamiento es incorrecto, el reclamo deberá realizarlo a la marca del producto junto a la factura de compra, matrícula del instalador y datos del producto.</p>
+            <p>En caso de productos electrónicos, tienen 72 hs de prueba para realizar cambios. Pasado ese lapso de tiempo deberá contactar a la marca de producto correspondiente.</p>
+            <p>Para los demás productos publicados en la web, el periodo de prueba es de 7 (siete) días desde el momento de recepción del producto.
+<strong>No se aceptan cambios de productos de cuidado personal (depiladoras, afeitadoras, cortadoras de cabello)</strong>.</p>
+            <h3>Para poder solicitar un cambio durante el período de prueba:</h3>
+            <p>1. Presentar la Factura de compra correspondiente.</p>
+            <p>2. Certificado de garantía vigente.</p>
+            <p>3. El producto debe estar en las mismas condiciones que fue entregado.</p>
+            <p>4. Entregar el producto completo: con sus accesorios, manuales, embalajes originales completos y en perfectas condiciones. Esto quiere decir que no pueden estar rotas las gráficas de las cajas, plumavit de interiores u otros.</p>
+            <p>5. Si el producto es devuelto por falla, se realizará un chequeo que confirmará la falla, la cual, si no se atribuye a un mal uso del mismo, se podrá hacer efectivo el reclamo.</p>
+            
+            <h3>7. Contacto</h3>
+            <p>Para cualquier consulta, contáctanos en <a href="contacto.html">nuestra página de contacto</a>.</p>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer class="footer">
