--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
                         <img src="images/logo_trans.png" alt="Center Hogar Quilmes" class="logo-img">
                     </a>
                 </div>
-                <div class="header-actions">
-                    <button class="menu-toggle" aria-label="Abrir menú de navegación">Categorias</button>
-                </div>
+                <<div class="header-actions">
+    <button class="menu-toggle" aria-label="Abrir menú de navegación">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <line x1="3" y1="12" x2="21" y2="12"></line>
+            <line x1="3" y1="6" x2="21" y2="6"></line>
+            <line x1="3" y1="18" x2="21" y2="18"></line>
+        </svg>
+    </button>
+</div>
             </div>
             <div class="search-bar">
                 <div class="search-bar-input-container">
@@ -174,9 +180,9 @@
                         </a>
                     </div>
                     <div class="home-categories-item">
-                        <a href="categoria.html?nombre=Hornos%2C+microondas+y+freidoras">
-                            <img class="home-categories-img" src="images/owl_carrusel/Horno_electrico_Bgh_BHE30FN24T_c_Airfryer_30lts_1600wts_1-removebg-preview.png" alt="Hornos, microondas y freidoras">
-                            <div class="home-categories-name">Hornos, microondas y freidoras</div>
+                        <a href="categoria.html?nombre=Climatizacion&subcategoria=Aires+acondicionados">
+                            <img class="home-categories-img" src="images/owl_carrusel/4173289_f-removebg-preview.png" alt="Aires acondicionados">
+                            <div class="home-categories-name">Aires acondicinados</div>
                         </a>
                     </div>
                     <div class="home-categories-item">
@@ -244,6 +250,7 @@
             <li><a href="terminos.html">Términos y condiciones</a></li>
             <li><a href="contacto.html">Contacto</a></li>
             <li><a href="privacidad.html">Privacidad</a></li>
+            <li><a href="garantia.html">Políticas de garantías</a></li>
         </ul>
     </div>
     </footer>
