--- a/privacidad.html
+++ b/privacidad.html
@@ -21,19 +21,15 @@
                         <img src="images/logo_trans.png" alt="Center Hogar Quilmes" class="logo-img">
                     </a>
                 </div>
-                <div class="header-actions">
-                    <div class="user-options">
-                        <a href="presupuesto.html" class="user-link" title="Pedir presupuesto" aria-label="Pedir presupuesto">
-                            <span class="icon">📝</span>
-                            <span class="label">Pedir presupuesto</span>
-                        </a>
-                        <a href="contacto.html" class="cart-link" title="Contacto" aria-label="Contacto">
-                            <span class="icon">📱</span>
-                            <span class="label">Contacto</span>
-                        </a>
-                    </div>
-                    <button class="menu-toggle" aria-label="Abrir menú de navegación">☰</button>
-                </div>
+                <<div class="header-actions">
+    <button class="menu-toggle" aria-label="Abrir menú de navegación">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <line x1="3" y1="12" x2="21" y2="12"></line>
+            <line x1="3" y1="6" x2="21" y2="6"></line>
+            <line x1="3" y1="18" x2="21" y2="18"></line>
+        </svg>
+    </button>
+</div>
             </div>
             <div class="search-bar">
                 <div class="search-bar-input-container">
