--- a/presupuesto.html
+++ b/presupuesto.html
@@ -30,7 +30,15 @@
                             <span class="label">Contacto</span>
                         </a>
                     </div>
-                    <button class="menu-toggle" aria-label="Abrir menú de navegación">☰</button>
+                    <div class="header-actions">
+    <button class="menu-toggle" aria-label="Abrir menú de navegación">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <line x1="3" y1="12" x2="21" y2="12"></line>
+            <line x1="3" y1="6" x2="21" y2="6"></line>
+            <line x1="3" y1="18" x2="21" y2="18"></line>
+        </svg>
+    </button>
+</div>
                 </div>
             </div>
             <div class="search-bar">
@@ -170,6 +178,7 @@
                 <li><a href="terminos.html">Términos y condiciones</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
                 <li><a href="privacidad.html">Privacidad</a></li>
+                <li><a href="garantia.html">Políticas de garantías</a></li>
             </ul>
         </div>
     </footer>
