--- a/privacidad.html
+++ b/privacidad.html
@@ -163,10 +163,11 @@
         <div class="container">
             <p>© 2025 Center Hogar Quilmes. Todos los derechos reservados.</p>
             <ul>
-                <li><a href="terminos.html">Términos y condiciones</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="privacidad.html">Privacidad</a></li>
-            </ul>
+            <li><a href="terminos.html">Términos y condiciones</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="privacidad.html">Privacidad</a></li>
+            <li><a href="garantia.html">Políticas de garantías</a></li>
+        </ul>
         </div>
     </footer>
 
