--- a/garantia.html
+++ b/garantia.html
@@ -138,7 +138,7 @@
             <p>4. Entregar el producto completo: con sus accesorios, manuales, embalajes originales completos y en perfectas condiciones. Esto quiere decir que no pueden estar rotas las gráficas de las cajas, plumavit de interiores u otros.</p>
             <p>5. Si el producto es devuelto por falla, se realizará un chequeo que confirmará la falla, la cual, si no se atribuye a un mal uso del mismo, se podrá hacer efectivo el reclamo.</p>
             
-            <h3>7. Contacto</h3>
+            <h3>Contacto</h3>
             <p>Para cualquier consulta, contáctanos en <a href="contacto.html">nuestra página de contacto</a>.</p>
         </section>
     </main>
