--- a/admin.html
+++ b/admin.html
@@ -96,7 +96,7 @@ const categoryFields = {
         subcategorias: [],
         folder: "cocinas",
         fields: [
-            { label: "Tipo de uso", name: "tipo_uso", type: "select", options: ["Domestico", "Industrial"] },
+            { label: "Tipo de uso", name: "tipo_uso", type: "select", options: ["Doméstico", "Industrial"] },
             { label: "Dimensiones (Alt x Anc x Pro)", name: "dimensiones", type: "text", placeholder: "85 x 56 x 60" },
             { label: "Válvula de seguridad", name: "valvula_seguridad", type: "select", options: ["Sí", "No"] },
             { label: "Luz en el horno", name: "luz_horno", type: "checkbox" }, // Changed to checkbox
