--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
                 <img src="images/logo.png" alt="Logo" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/tablet_dia_del_padre.webp" alt="tablet_dia_del_padre" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="images/descuento_efectivo.jpeg" alt="Descuentos en efectivo" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/notebook_dia_del_padre.webp" alt="notebook_dia_del_padre" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="images/transferencia_bancaria.jpeg" alt="transferencia bancaria" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
                 <img src="carrusel/termotanques_descuento_20.jpg" alt="Termotanques Descuento" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
