--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <img src="images/logo_trans.png" alt="Center Hogar Quilmes" class="logo-img">
                     </a>
                 </div>
-                <<div class="header-actions">
+                <div class="header-actions">
     <button class="menu-toggle" aria-label="Abrir menú de navegación">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <line x1="3" y1="12" x2="21" y2="12"></line>
@@ -93,18 +93,18 @@
                 <li><a href="categoria.html?nombre=Termotanques&subcategoria=Dual">Dual</a></li>
             </ul>
         </li><li class="has-submenu">
-            <a href="categoria.html?nombre=Pequeños electrodomesticos">Pequeños</a>
+            <a href="categoria.html?nombre=Pequeños Electrodomésticos">Pequeños</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Batidoras">Batidoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Licuadoras">Licuadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Multiprocesadoras">Multiprocesadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Mixers">Mixers</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Pavas electricas">Pavas Eléctricas</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Cafeteras">Cafeteras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Tostadoras">Tostadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Sandwicheras">Sandwicheras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subCategoria=Exprimidores y jugueras">Exprimidores y Jugueras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Picadoras">Picadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Batidoras">Batidoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Licuadoras">Licuadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Multiprocesadoras">Multiprocesadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Mixers">Mixers</a></li>
+                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=pavas eléctricas">Pavas Eléctricas</a></li>
+                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Cafeteras">Cafeteras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Tostadoras">Tostadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Sandwicheras">Sandwicheras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subCategoria=Exprimidores y jugueras">Exprimidores y Jugueras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Picadoras">Picadoras</a></li>
             </ul>
         </li>
         <li class="has-submenu">
@@ -130,10 +130,10 @@
                 <img src="images/logo.png" alt="Logo" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="images/descuento_efectivo.jpeg" alt="Descuentos en efectivo" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="images/banner_drean.webp" alt="Banner Drean" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="images/transferencia_bancaria.jpeg" alt="transferencia bancaria" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="images/descuento_efectivo.jpeg" alt="Descuentos en efectivo" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
                 <img src="carrusel/termotanques_descuento_20.jpg" alt="Termotanques Descuento" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
@@ -222,7 +222,7 @@
                         </a>
                     </div>
                     <div class="home-categories-item">
-                        <a href="categoria.html?nombre=Pequeños electrodomesticos">
+                        <a href="categoria.html?nombre=Pequeños Electrodomésticos">
                             <img class="home-categories-img" src="images/owl_carrusel/Pava_Electrica_Philips_HD9368_90_Negra_Temp_Para_Mate_17L_2200w_3-removebg-preview.png" alt="Pequeños Electrodomésticos">
                             <div class="home-categories-name">Pequeños Electro</div>
                         </a>
