--- a/index.html
+++ b/index.html
@@ -127,16 +127,16 @@
     <div class="carousel">
         <div class="carousel-slides">
             <div class="slide active">
-                <img src="images/logo.png" alt="Logo" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="images/banner_logo.webp" alt="Logo" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
                 <img src="images/banner_drean.webp" alt="Banner Drean" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="images/descuento_efectivo.jpeg" alt="Descuentos en efectivo" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="images/banner_electrolux.webp" alt="Banner Electrolux" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/termotanques_descuento_20.jpg" alt="Termotanques Descuento" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="images/banner_termot_y_calefones.webp" alt="Banner termotanques y calefones" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
                 <img src="carrusel/HeladeraSamsungRT42_cuota_simple.webp" alt="Heladera Samsung RT42" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
